--- a/.azurepipelines/templates/build-publish-whl-steps.yml
+++ b/.azurepipelines/templates/build-publish-whl-steps.yml
@@ -26,9 +26,9 @@ steps:
     #workingDirectory: # Optional
     failOnStderr: true # Optional
 
-- task: TwineAuthenticate@0
+- task: TwineAuthenticate@1
   inputs:
-    externalFeeds: ${{parameters.pypi_auth_feed}}
+    pythonUploadServiceConnection: ${{parameters.pypi_auth_feed}}
 
 - script: 'twine upload -r ${{parameters.pypi_auth_feed}} --config-file $(PYPIRC_PATH) dist/*'
   displayName: 'Publish to pypi'
